--- a/mokepon.html
+++ b/mokepon.html
@@ -12,7 +12,19 @@
     <section id="seleccionar-mascota">
         <h2>Elige a tu mascota:</h2>
 
-    Mascotas
+        <label for="hipodoge">Hipodoge</label>
+        <input type="radio" name="mascota" id="hipodoge"/>
+        <label for="capipepo">Capipepo</label>
+        <input type="radio" name="mascota" id="capipepo"/>
+        <label for="ratigueya">Ratigueya</label>
+        <input type="radio" name="mascota" id="ratigueya"/>
+
+        Hipodoge -> Agua
+        Capipepo -> Tierra
+        Ratigueya -> Fuego
+        Langostelvis -> Agua y Fuego
+        Tucapalma -> Agua y Tierra
+        Pydos -> Tierra y Fuego
 
         <button>seleccionar</button>
     </section>
