--- a/mokepon.html
+++ b/mokepon.html
@@ -19,14 +19,8 @@
         <label for="ratigueya">Ratigueya</label>
         <input type="radio" name="mascota" id="ratigueya"/>
 
-        Hipodoge -> Agua
-        Capipepo -> Tierra
-        Ratigueya -> Fuego
-        Langostelvis -> Agua y Fuego
-        Tucapalma -> Agua y Tierra
-        Pydos -> Tierra y Fuego
 
-        <button>seleccionar</button>
+        <button id="boton-mascota">seleccionar</button>
     </section>
 
     <section id="seleccionar-ataque">
@@ -34,9 +28,9 @@
         <p>Tu mascota tiene <span>3</span> vidas</p>
         <p>La mascota del anemigo tiene <span>3</span> vidas</p>
         <p>
-            <button>Fuego 🔥</button>
-            <button>Agua 💧</button>
-            <button>Tierra🌱</button>
+            <button id="boton-fuego">Fuego 🔥</button>
+            <button id="boton-agua">Agua 💧</button>
+            <button id="boton-tierra">Tierra🌱</button>
         </p>
     </section>
 
@@ -45,7 +39,9 @@
     </section>
     
     <section id="reiniciar">
-        <button>Reiniciar</button>
+        <button id="boton-reiniciar">Reiniciar</button>
     </section>
+
+    <script src="./js/mokepon.js"></script>
 </body>
 </html>
