--- a/mokepon.html
+++ b/mokepon.html
@@ -25,8 +25,8 @@
 
     <section id="seleccionar-ataque">
         <h2>Elige a tu ataque:</h2>
-        <p>Tu mascota tiene <span>3</span> vidas</p>
-        <p>La mascota del anemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota <span id = "mascota-jugador"></span> tiene <span>3</span> vidas</p>
+        <p>La mascota <span id="mascota-enemigo"></span> del anemigo tiene <span>3</span> vidas</p>
         <p>
             <button id="boton-fuego">Fuego 🔥</button>
             <button id="boton-agua">Agua 💧</button>
@@ -35,7 +35,7 @@
     </section>
 
     <section id="mensajes">
-        <p>tu mascota atacó con Fuego, la mascota de tu enemigo atacó con Tierra - GANASTE</p>
+
     </section>
     
     <section id="reiniciar">
